--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="./assets/css/bootstrap-theme.css">
         <link href="./assets/css/application.css" rel="stylesheet">
         <link href="./assets/css/jquery-ui-1.10.0.custom.css" rel="stylesheet">
+
         <!-- load js -->
         <script src="lib/jquery.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="lib/form2js.js"></script>
         <script type="text/javascript" src="lib/json2.js"></script>
         <script type="text/javascript" src="lib/q.js"></script>
+        <script src="lib/customTable.js" type="text/javascript"></script>
         <script src="lib/lodash.js" type="text/javascript" charset="utf-8"></script>
         <script src="lib/backbone.js" type="text/javascript" charset="utf-8"></script>
         <script src="lib/backbone.marionette.js" type="text/javascript" charset="utf-8"></script>
