支持事件类型；

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="./assets/css/bootstrap-theme.css">
         <link href="./assets/css/application.css" rel="stylesheet">
         <link href="./assets/css/jquery-ui-1.10.0.custom.css" rel="stylesheet">
-
+        <link href="./assets/css/jquery-ui-1.10.4.css" rel="stylesheet">
         <!-- load js -->
         <script src="lib/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="lib/jquery-ui-1.10.4.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="lib/form2js.js"></script>
         <script type="text/javascript" src="lib/json2.js"></script>
         <script type="text/javascript" src="lib/q.js"></script>
