--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="lib/jquery-ui-1.10.4.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="lib/form2js.js"></script>
         <script type="text/javascript" src="lib/json2.js"></script>
-        <script type="text/javascript" src="lib/q.js"></script>
+        <script type="text/javascript" src="lib/bootstrap.min.js"></script>
         <script src="lib/customTable.js" type="text/javascript"></script>
         <script src="lib/lodash.js" type="text/javascript" charset="utf-8"></script>
         <script src="lib/backbone.js" type="text/javascript" charset="utf-8"></script>
